--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,12 @@
+autopep8==2.0.4
+black==23.12.1
 blinker==1.7.0
 certifi==2023.11.17
+cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==41.0.7
 dnspython==2.4.2
 Flask==3.0.0
 Flask-Cors==4.0.0
@@ -10,8 +14,17 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.12.1
+pillow==10.2.0
+platformdirs==4.1.0
+pycodestyle==2.11.1
+pycparser==2.21
+PyJWT==2.8.0
 pymongo==4.6.1
 python-dotenv==1.0.0
 requests==2.31.0
+typing==3.7.4.3
 urllib3==2.1.0
 Werkzeug==3.0.1
